# DATAENG

./: .gitignore  CMS.sql  CMScopilot.sql  DOWNLOAD_TRACKING_FIXES.md  Django_Full_Load.sql  Django_sq_agent_job.sql  ISSUE_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_new.md  RENAME_FOLDERS.sh  RUN_CMS_DBWEAVER.md  ServerMaintenance_Overview.md  TenGroupFileLoader_diagnostic.sql  cml_load.sql  cms_lambda_loader.py  cms_load.sql  cms_load_github.sql  dhango_agent_jobscript13.sql  diagnostic_queries.sql  django_load.sql  django_load_countries.sql  index.html  member_profiles.sql  members.py  new.sql  query.sql  refrences.sql  rename.sql
CMS/: CMS_FULL_LOAD_AGENT_JOB.sql
CMS_STAFF/: CMS_FULL_LOAD.sql
Django_Import/: @Project.manifest  Control.dtsx  Control_MemberProfile.dtsx  DestinationServer_OLEDB.conmgr  Django_S3_Import.sql  Load%20articles.dtsx  Load%20brands.dtsx  Load%20dining_celebrity_chefs.dtsx  Load%20dining_cuisine.dtsx  Load%20dining_hot_table_bookings.dtsx  Load%20dining_hot_tables.dtsx  Load%20dining_restaurant_benefits.dtsx  Load%20dining_restaurants.dtsx  Load%20email_templates.dtsx  Load%20entertainment_artists.dtsx  Load%20entertainment_bookings.dtsx  Load%20entertainment_delivery_methods.dtsx  Load%20entertainment_event_tags.dtsx  Load%20entertainment_events.dtsx  Load%20entertainment_performances.dtsx  Load%20entertainment_ticket_types.dtsx  (+29 more)
tmxvoice-hackathon-main/: .env.example  .gitignore  Procfile  README.md  makecall.py  makecall_inbound.py  makecall_outbound.py  pyproject.toml  start_call.py
tmxvoice-hackathon-main/static/: index.html
(+1711 files in other folders)
