[project]
name = "tmxvoice-hackathon"
version = "0.1.0"
description = "FastAPI service that registers Twilio calls with ElevenLabs Conversational AI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "twilio",
    "elevenlabs",
    "python-multipart",
]
